--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -35,7 +35,7 @@
                         <tbody>
                             {% for app in apps %}
                                 <tr>
-                                    <td>{{app.name}}</td>
+                                    <td><a href="{{ url_for('app.details', short_name = app.short_name) }}">{{app.name}}</a></td>
                                     <td class="text-center"><a href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                     <td class="text-center"><a href="{{url_for('app.export_to', short_name=app.short_name, type='task', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                 </tr>
@@ -60,7 +60,7 @@
                         <tbody>
                             {% for app in apps %}
                                 <tr>
-                                    <td>{{app.name}}</td>
+                                    <td><a href="{{ url_for('app.details', short_name = app.short_name) }}">{{app.name}}</a></td>
                                     <td class="text-center"><a href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                     <td class="text-center"><a href="{{url_for('app.export_to', short_name=app.short_name, type='task_run', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                 </tr>
@@ -85,7 +85,7 @@
                         <tbody>
                             {% for app in apps %}
                                 <tr>
-                                    <td>{{app.name}}</td>
+                                    <td><a href="{{ url_for('app.details', short_name = app.short_name) }}">{{app.name}}</a></td>
                                     <td class="text-center"><a href="{{app.flickr_link}}" target="_blank"><i class="fa fa-link"></i></a></td>
                                     <td class="text-center"><a href="{{ url_for('uploads.uploaded_file', filename=(app.info.container + '/' + app.info.image_set))}}"><i class="fa fa-download"></i></a></td>
                                 </tr>
