All user locations are now shown

--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -118,7 +118,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white text-center chart">
-                            <h4 class=" padding-bottom-sm">Locations of Anonymous Users</h4>
+                            <h4 class=" padding-bottom-sm">Locations of Users</h4>
                             <div id="map" style="height:480px;"></div>
                         </div>
                     </div>
