Navigation changed for web service options

--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -28,8 +28,6 @@
         <li class="nav-link"><a href="{{url_for('admin.users')}}">Administrators</a></li>
         <li class="nav-link"><a href="{{url_for('admin.export_users', format='csv')}}">Export Users</a></li>
         <li class="nav-link"><a href="{{url_for('rq_dashboard.overview')}}">Background Jobs</a></li>
-        <li class="nav-link"><a href="{{url_for('oclc.search')}}">OCLC Catalogue</a></li>
-        <li class="nav-link"><a href="{{url_for('bl.search')}}">BL Catalogue</a></li>
     </ul>
 </li>
 {% endif %}
@@ -46,6 +44,14 @@
                 <li class="nav-link"><a href="{{url_for('app.update', short_name=active_app)}}"> {{_('Project Details')}}</a></li>
                 <li class="nav-link"><a href="{{url_for('app.auditlog', short_name=active_app)}}">{{_('Audit Logs')}}</a></li>
             {% endif %}
+        </ul>
+    </li>
+    <li class="nav-link">
+        <a href="#" id="web-service-options">Web Service<i class="fa fa-angle-down pull-right"></i></a>
+        <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
+            <li class="nav-link"><a href="{{url_for('bl.search')}}">Search BL</a></li>
+            <li class="nav-link"><a href="{{url_for('oclc.search')}}">Search OCLC</a></li>
+            <li class="nav-link"><a href="#">Help</a></li>
         </ul>
     </li>
     {% endif %}
