Web service menu id corrected

--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -48,7 +48,7 @@
     </li>
     <li class="nav-link">
         <a href="#" id="web-service-options">Web Service<i class="fa fa-angle-down pull-right"></i></a>
-        <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
+        <ul class="nav nav-stacked inset-shadow remove-padding-top" id="web-service-menu" hidden>
             <li class="nav-link"><a href="{{url_for('bl.search')}}">Search BL</a></li>
             <li class="nav-link"><a href="{{url_for('oclc.search')}}">Search OCLC</a></li>
             <li class="nav-link"><a href="#">Help</a></li>
