--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -51,7 +51,7 @@
         <ul class="nav nav-stacked inset-shadow remove-padding-top" id="web-service-menu" hidden>
             <li class="nav-link"><a href="{{url_for('z3950.search', z3950_catalogue="bl")}}">Search BL</a></li>
             <li class="nav-link"><a href="{{url_for('z3950.search', z3950_catalogue="oclc")}}">Search OCLC</a></li>
-            <li class="nav-link"><a href="#">Help</a></li>
+            <li class="nav-link"><a href="{{url_for('z3950.help')}}">Help</a></li>
         </ul>
     </li>
     {% endif %}
