Removed unused class declaration

--- a/templates/admin/bl_search.html
+++ b/templates/admin/bl_search.html
@@ -11,7 +11,7 @@
                 {% include "_flash_messages.html" %}
                 <div class="row vcenter-sm">
                     <div class="col-sm-10 col-xs-12 vcenter-sm">
-                        <h1 class="">Search the British Library database</h1>
+                        <h1>Search the British Library database</h1>
                     </div>
                     <div class="col-sm-2 col-xs-12">
                             <a href="#" class="btn btn-inverse pull-right-sm" data-toggle="modal" data-target="#helpmodal"><i class="fa fa-book"></i> Help</a>
