--- a/templates/admin/oclc_search.html
+++ b/templates/admin/oclc_search.html
@@ -10,7 +10,7 @@
                 {% include "_flash_messages.html" %}
                 <div class="row vcenter-sm">
                     <div class="col-sm-10 col-xs-12 vcenter-sm">
-                        <h1 class="">Search the OCLC database</h1>
+                        <h1>Search the OCLC database</h1>
                     </div>
                     <div class="col-sm-2 col-xs-12">
                             <a href="#" class="btn btn-inverse pull-right-sm" data-toggle="modal" data-target="#helpmodal"><i class="fa fa-book"></i> Help</a>
