Front page tag line style change

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="splash">
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
-      <h1>Crowd-sourcing from the British Library</h1>
+      <h1>Crowd-sourcing from <br />the British Library</h1>
         <div class="col-sm-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
               <a>
@@ -21,6 +21,7 @@
 
 <a id="intro"></a>
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
+  <p style="float:right;padding-right:10px;"><small>Photo: © <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
       <div class="container container-padded text-center">
          <div class="col-sm-offset-2 col-sm-8">
           <h2 class="inset-text-grey">What's this all about?</h2>
