Copyright symbol changed for HTML character entity

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -21,7 +21,7 @@
 
 <a id="intro"></a>
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
-  <p style="float:right;padding-right:10px;"><small>Photo: © <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
+  <p style="float:right;padding-right:10px;"><small>Photo: &copy; <a href="http://www.lensintheface.com" target="_href">Jon Ellis</a></small></p>
       <div class="container container-padded text-center">
          <div class="col-sm-offset-2 col-sm-8">
           <h2 class="inset-text-grey">What's this all about?</h2>
