--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,7 +119,7 @@ section.white:before{right:100%}
 section.white:after{left:100%}
 .box{background-color:#FFF;border:1px solid #d9d9d9}
 .app.box{padding:5px;min-height:138px;margin-bottom:15px}
-.app.box .image{display:block;max-width:208px;width:100%;height:138px;background-image:url(../img/placeholder.png);background-repeat:no-repeat;background-position:center center;background-size:cover;-webkit-box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5);box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5)}
+.app.box .image{display:block;max-width:208px;width:100%;height:138px;background-image:url(../img/placeholder.png);background-repeat:no-repeat;background-size:cover;-webkit-box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5);box-shadow:inset 0 0 2px 0 rgba(0,0,0,0.5)}
 .app.box h3{padding:10px 5px 2px;margin:0}
 .app.box p{padding-left:5px;margin-bottom:5px;font-size:12px}
 .app.box .btn{margin:0 4px 0 0}
