--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
     <!-- Le styles -->
-    <link href="{{url_for('static', filename='vendor/bootstrap.min.css')}}" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" type="text/css">
-    <link href="{{url_for('static', filename='css/styles.css')}}?v=2.2.4" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.min.css')}}">
+    <link type="text/css" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}?v=2.2.4">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400">
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Permanent+Marker">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -39,8 +39,8 @@
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery-2.1.3.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/jquery.cookie.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='js/jquery.xdomainrequest.min.js')}}"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
-    <script src="{{url_for('static', filename='js/history/scripts/bundled/html4+html5/jquery.history.js')}}" type="text/javascript"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery-ui.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/history/scripts/bundled/html4+html5/jquery.history.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/bootstrap-3.3.2/js/bootstrap.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/modernizr.min.js')}}"></script>
     <script type="text/javascript" src="{{url_for('static', filename='vendor/browser-detection.js')}}" ></script>
