--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 {% import "account/_helpers.html" as account_helper %}
 {% block content %}
 {% include "_flash_messages_floating.html" %}
-<div class="splash" data-splash="{{url_for('static', filename='img/Cards/splash1.jpg')}}">
+<div class="splash" id="home-splash">
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
       <h1>Crowd-sourcing from <br />the British Library</h1>
