Splash screens added for more pages

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -4,6 +4,20 @@
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
+<div class="splash" id="data-splash">
+  <div class="splash-overlay vcenter hcenter">
+    <div class="container text-center ie-vcenter padding-top">
+        <div class="col-sm-12">
+            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+              <a>
+                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                   <div>Go</div>
+              </a>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
 <div class="container container-padded remove-padding-bottom">
     <section class="white">
         <div class="container container-padded">
