--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -6,6 +6,20 @@
 {% import "admin/_helpers.html" as admin_helper %}
 
 {% block content %}
+  <div class="splash" id="community-splash">
+  <div class="splash-overlay vcenter hcenter">
+    <div class="container text-center ie-vcenter padding-top">
+        <div class="col-sm-12">
+            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+              <a>
+                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                   <div>Go</div>
+              </a>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
 <div class="container-padded">
   <div class="container container-padded">
     <div class="row">
