--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -1,3 +1,17 @@
+<div class="splash" id="about-splash">
+  <div class="splash-overlay vcenter hcenter">
+    <div class="container text-center ie-vcenter padding-top">
+        <div class="col-sm-12">
+            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+              <a>
+                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                   <div>Go</div>
+              </a>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
 <div class="container-padded remove-padding-bottom">
     <section class="white">
         <div class="container container-padded">
