--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -63,7 +63,7 @@ hr.extra-margins{margin-top:40px;margin-bottom:40px}
 .navbar-brand{padding:0 15px;margin:0}
 .navbar-nav>li{margin:0 20px}
 .navbar .nav > li > a{-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;color:#fff;-webkit-transition:color 200ms 0;-moz-transition:color 200ms 0;-ms-transition:color 200ms 0;-o-transition:color 200ms 0;transition:color 200ms 0}
-.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#fff;color:#D00000}
+.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:rgba(0,0,0,0);color:#D00000}
 .nav-link a:after{position:absolute;left:0;bottom:0;width:100%;height:2px;background-color:#D00000;content:'';opacity:0;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-ms-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s;-webkit-transition:-webkit-transform .2s;-moz-transition:-moz-transform .2s;-ms-transition:-ms-transform .2s;-o-transition:-o-transform .2s;transition:transform .2s;-webkit-transform:translateY(10px);-moz-transform:translateY(10px);-ms-transform:translateY(10px);-o-transform:translateY(10px);transform:translateY(10px)}
 .nav-link.active a:after{opacity:1;transform:none}
 .navbar-fixed-top .nav-link:hover a:first-child:after,.navbar-fixed-top .nav-link:focus a:first-child:after{opacity:1;transform:none}
@@ -346,7 +346,7 @@ img#navbar-logo {height: 90%;}
 .modal-dialog {margin: 100px auto;}
 @media (max-width: 767px) {
 .navbar .container{width:auto!important}
-.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#D00000}
+.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{background-color:#D00000;background-color:rgba(0,0,0,0,)}
 .navbar.opaque .nav > li.active > a{color:#fff}
 .navbar .nav > li > a{color:#404040}
 .navbar-fixed-top{padding-top:10px;padding-bottom:10px;background-color:rgba(255,255,255,1);border-bottom:2px solid #eee}
