Further changes to buttons on splash screens

--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -10,7 +10,7 @@
         <div class="col-sm-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
               <a>
-                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                   <div><i class="fa fa-angle-double-down fa-3x"></i></div>
                    <div>Go</div>
               </a>
             </div>
