--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -2,9 +2,9 @@
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
         <div class="col-sm-12">
-            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+            <div data-anchor="#intro" class="btn btn-circle btn-circle-small anchor-btn">
               <a>
-                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                   <div><i class="fa fa-angle-double-down fa-3x"></i></div>
                    <div>Go</div>
               </a>
             </div>
