More changes to small splash screen buttons

--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -10,10 +10,10 @@
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
         <div class="col-sm-12">
-            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+            <div data-anchor="#intro" class="btn btn-circle btn-circle-small anchor-btn">
               <a>
                    <div><i class="fa fa-angle-double-down fa-3x"></i></div>
-                   <div>Go</div>
+                   <div><i class="fa fa-angle-double-down fa-3x"></i></div>
               </a>
             </div>
         </div>
@@ -22,6 +22,7 @@
 </div>
 <div class="container-padded">
   <div class="container container-padded">
+    <a id="intro"></a>
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
         {% include "_flash_messages.html" %}
