--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -8,10 +8,10 @@
   <div class="splash-overlay vcenter hcenter">
     <div class="container text-center ie-vcenter padding-top">
         <div class="col-sm-12">
-            <div data-anchor="#intro" class="btn btn-circle anchor-btn">
+            <div data-anchor="#intro" class="btn btn-circle btn-circle-small anchor-btn">
               <a>
                    <div><i class="fa fa-angle-double-down fa-3x"></i></div>
-                   <div>Go</div>
+                   <div><i class="fa fa-angle-double-down fa-3x"></i></div>
               </a>
             </div>
         </div>
@@ -19,6 +19,7 @@
   </div>
 </div>
 <div class="container container-padded remove-padding-bottom">
+    <a id="intro"></a>
     <section class="white">
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
