--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -5,7 +5,7 @@
             <div data-anchor="#intro" class="btn btn-circle btn-circle-small anchor-btn">
               <a>
                    <div><i class="fa fa-angle-double-down fa-3x"></i></div>
-                   <div>Go</div>
+                   <div><i class="fa fa-angle-double-down fa-3x"></i></div>
               </a>
             </div>
         </div>
@@ -13,6 +13,7 @@
   </div>
 </div>
 <div class="container-padded remove-padding-bottom">
+    <a id="intro"></a>
     <section class="white">
         <div class="container container-padded">
             {% include "_flash_messages.html" %}
