Nav bar transparent by default

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar opaque navbar-fixed-top navbar-default">
+<div class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,7 +22,7 @@
           {% if current_user.is_authenticated() %}
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span></a>
-                  <ul class="dropdown-menu opaque">
+                  <ul class="dropdown-menu">
                     <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> {{ _('Profile') }}</a></li>
                     <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> {{ _('Settings') }}</a></li>
                     {% if current_user.admin == 1 %}
